Fixed value props on mobile

--- a/src/styles/global/carousel.scss
+++ b/src/styles/global/carousel.scss
@@ -18,12 +18,13 @@
 }
 
 .carousel__dot {
+  background: $white;
   padding: 7px;
   border-radius: 28px;
   border: 0;
   margin-left: 18px;
   margin-right: 18px;
-  opacity: 0.8;
+  opacity: 0.4;
   @include media_max_break(md) {
     padding: 4px;
     margin-left: 7px;
